[package]
name = "whirlpool-cpi"
version = "0.1.0"
description = "CPI Adapter for Orca Whirlpool"
edition = "2021"
keywords = ["solana", "anchor", "raydium"]

[lib]
crate-type = ["cdylib", "lib"]
name = "whirlpool_cpi"

[features]
default = ["cpi"]
cpi = ["no-entrypoint"]
no-entrypoint = []

[dependencies]
anchor-lang = "0.30.0"
